# SMLib

./: .gitignore  CMakeLists.txt  Features.md  README.md  fetures.md
cmake/: Version.h.in  config.cmake  functions.cmake
include/SMLib/: Version.h  Video.h  config.h
include/SMLib/Display/: Dispaly.h  Display.h
include/SMLib/System/: Export.h  NoneCopyable.h  PlatformDetection.h  String.h  SystemExport.h
include/SMLib/Video/: DispalyManager.h  DispalyManger.h  DispalyMode.h  Display.h  DisplayContainer.h  DisplayMode.h  Export.h  Flags.h  GeneralTypes.h  Monitor.h  MultiDisplay.h  MultiDisplays.h  Types.h  VideoMode.h  WindowBase.h
src/SMLib/: CMakeLists.txt
src/SMLib/Display/: Display.cpp  DisplayImpl.h
src/SMLib/Display/Win32/: DisplayImpl.cpp  Win32DisplayImpl.cpp
src/SMLib/Entry/: CMakeLists.txt  MainWin32.cpp
src/SMLib/System/: CMakeLists.txt  NoneCopyable.cpp  String.cpp
src/SMLib/Video/: CMakeLists.txt  DispalyMode.cpp  Display.cpp  Display.h  DisplayContainer.cpp  DisplayImpl.h  DisplayManager.cpp  DisplayMode.cpp  Monitor.cpp  MultiDisplay.cpp  MultiDisplays.cpp  VideoMode.cpp
src/SMLib/Video/Linux/: DisplayImpl.cpp
src/SMLib/Video/Win32/: DisplayImpl.cpp
tests/test-app/: CMakeLists.txt  testApp.cpp
